# crypto-advisor-ai-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  setup.cfg  test_agent.py  tools.py
.github/workflows/: ci.yml
api_requests/: altcoin_dominance_request.py  analisys_requests.py  chart_request.py  cmc_historical_request.py  fear_and_greed_request.py  pattern_recognition_request.py  technical_analisys_request.py
patches/: __init__.py  fix_pandas_ta.py
providers/: binance.py  coinmarketcup.py
src/crypto_advisor/: __init__.py  agent.py  cli.py  main.py  prompts.py  server.py  tools.py  workflows.py
src/crypto_advisor/api/: __init__.py  chart.py  market.py  patterns.py  technical.py  volatility.py
src/crypto_advisor/api/models/: __init__.py  chart.py  market.py  patterns.py  technical.py
src/crypto_advisor/providers/: __init__.py  binance.py  coinmarketcap.py
src/crypto_advisor/scripts/: run_tests.py
src/crypto_advisor/services/: __init__.py  ta_service.py
src/crypto_advisor/utils/: __init__.py  patch.py
tests/: conftest.py  test_agent.py  test_integration_volatility.py  test_ta_service_unit.py  test_volatility_index.py
tests/integration/: test_ta_service_integration.py
