[tool.poetry]
name = "crypto-advisor"
version = "0.1.0"
description = "AI Agent for cryptocurrency market analysis"
authors = ["Mikhail <mikhail.ukhin@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_advisor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = ">=0.0.312"
langchain-openai = ">=0.0.2"
langchain-community = ">=0.0.13"
python-dotenv = "^1.0.0"
requests = "^2.28.0"
pandas = "^2.0.0"
pandas-ta = "^0.3.14b"
ta = "^0.10.2"
setuptools = "^68.0.0"
langgraph = "^0.0.36"
langchain-core = "^0.1.40"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
aiohttp = ">=3.9,<3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.4.4"

[tool.poetry.scripts]
fix-pandas-ta = "crypto_advisor.utils.patch:patch_squeeze_pro"
crypto-advisor = "crypto_advisor.cli:main"
crypto-advisor-api = "crypto_advisor.server:run"
test = "pytest:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
addopts = "-ra"

markers = [
    "integration: tests that require external services",
]

filterwarnings = [
    "ignore::DeprecationWarning:pandas_ta.*:",
    "ignore::UserWarning:.*pydantic.*:",
    "ignore::DeprecationWarning:.*pydantic.*:",
]
